--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "rxjs": "^7.2.0",
     "save": "^2.4.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "xlsx": "^0.17.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
