--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.2.6",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/config": "^1.2.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "passport": "^0.4.1",
@@ -40,7 +41,8 @@
     "save": "^2.4.0",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.37",
-    "xlsx": "^0.17.1"
+    "xlsx": "^0.17.1",
+    "log4js": "^6.4.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
