--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.2.6",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.2.6",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.2.6",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
-    "@nestjs/config": "^1.2.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "lodash": "^4.17.21",
+    "log4js": "^6.4.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -42,7 +44,7 @@
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.37",
     "xlsx": "^0.17.1",
-    "log4js": "^6.4.1"
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
