--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "bcrypt": "^5.0.1",
+    "jimp": "^0.16.1"
   },
   "jest": {
     "moduleFileExtensions": [
