--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.2.6",
+    "@nestjs/common": "^8.4.7",
     "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.2.6",
+    "@nestjs/core": "^8.4.7",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.1.0",
-    "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/platform-express": "^8.4.7",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjsx/crud": "^4.6.2",
+    "@nestjsx/crud-typeorm": "^4.6.2",
     "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
+    "class-validator": "^0.13.2",
     "lodash": "^4.17.21",
     "log4js": "^6.4.1",
+    "moment": "^2.29.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -42,26 +45,26 @@
     "rxjs": "^7.2.0",
     "save": "^2.4.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.37",
-    "xlsx": "^0.17.1",
-    "moment": "^2.29.1"
+    "typeorm": "^0.2.45",
+    "xlsx": "^0.17.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "bcrypt": "^5.0.1",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "27.0.6",
+    "jimp": "^0.16.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
@@ -69,9 +72,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.3.5",
-    "bcrypt": "^5.0.1",
-    "jimp": "^0.16.1"
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
